# OOP2_BASIC_interpreter

./: CMakeLists.txt
Basic/: Basic.cpp  debug_probably  evalstate.cpp  evalstate.h  exp.cpp  program.cpp  program.h  statement.cpp  statement.h
